# agent-os

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATABASE_SETUP.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  PROVIDER_CONSOLIDATION_PLAN.md  README.md  REDIS_VL_TECHNICAL_ANALYSIS.md  WEBHOOK_ORCHESTRATION.md  agent_os.db  alembic.ini  pyproject.toml  pytest.ini  pytest.integration.ini  pytest.xml
.claude/agents/: api-architect.md  bug-hunter.md  code-implementer.md  code-reviewer.md  tdd-specialist.md
.github/workflows/: ruff.yml  test.yml
alembic/: env.py
alembic/versions/: 0ad7dc42f266_add_integration_system_tables.py  186705303977_add_whatsapp_fields_to_agents.py  24887e8ed3f4_add_knowledge_content_and_chunks_tables.py  2a73fe0d95ed_add_clean_knowledge_tables.py  491568791c88_setup_ai_schema_for_agentos.py  5f5aa22c8e49_add_workflows_table.py  729532316381_create_ai_schema.py  86134d8125b5_initial_agent_model_with_llm_and_.py  90c3638fe282_add_team_and_enhanced_knowledge_models.py  986bab53fb5b_remove_agent_role_specialization_fields.py  9d3995e6a5b4_add_agent_roles_and_tools_support.py  add_knowledge_config_to_agents.py  ae657b67c7e7_create_postgresql_extensions.py  c594c010a2e2_add_team_and_enhanced_knowledge_models_.py  e27ee43d23db_create_agents_table.py  f3ddab0e3a19_update_to_pgvector.py  f7fd3af4bb4f_add_task_management_tables.py  initial_uuid_schema.py
app/: container.py  faststream_cli.py  initialization.py  server.py  startup.py
app/agents/: agent.py  roles.py
app/agents/api/: __init__.py  orchestration_routers.py  orchestration_schemas.py  routers.py  schemas.py
app/agents/events/: __init__.py  events.py  types.py
app/agents/repositories/: agent_repository.py
app/agents/services/: __init__.py  agent_service.py  orchestration_service.py
app/containers/: infrastructure.py  repositories.py  services.py  test_container.py
app/domains/agent_management/: __init__.py  agent.py
app/domains/communication/: __init__.py
app/domains/evaluation/: __init__.py
app/events/: __init__.py  broker.py  bus.py  core.py  types.py  websocket.py
app/events/agents/: __init__.py  events.py  handlers.py  publisher.py
app/events/api/: routers.py  schemas.py  websocket_router.py
app/events/core/: __init__.py  base.py  registry.py
app/events/domains/: __init__.py
app/events/handlers/: logging_handler.py  notification_handler.py
app/events/orchestration/: __init__.py  events.py  handlers.py  publisher.py  task_registry.py  task_state.py
app/events/webhooks/: __init__.py  events.py  handlers.py  publisher.py
app/infrastructure/cache/: __init__.py  service.py  types.py
app/infrastructure/providers/: __init__.py  ai_router.py  base.py  factory.py
app/initialization/: __init__.py  application_bootstrapper.py
app/initialization/services/: __init__.py  agent_os_initializer.py  agent_os_integrator.py  database_initializer.py  event_system_initializer.py  tool_system_initializer.py
app/integrations/: __init__.py  base.py  models.py  repositories.py  services.py
app/integrations/agno/: __init__.py  agent_converter.py  config.py  knowledge_adapter.py  model_factory.py
app/integrations/api/: routers.py  schemas.py
app/integrations/events/: __init__.py  events.py  types.py
app/knowledge/: knowledge.py
app/knowledge/api/: routers.py  schemas.py
app/knowledge/events/: __init__.py  events.py  types.py
app/knowledge/repositories/: knowledge_repository.py
app/knowledge/services/: agent_knowledge_factory.py  knowledge_service.py
app/providers/: __init__.py  ai_router.py  factory.py
app/providers/agno/: __init__.py  agent_converter.py  config.py  converter.py  database_factory.py  knowledge_adapter.py  model_factory.py  provider.py
app/services/ai/: __init__.py
app/shared/: __init__.py
app/shared/events/: __init__.py  broker.py  builder.py  domain_registry.py  registry.py
app/shared/server/: __init__.py  builder.py
app/tasks/: task.py
app/tasks/api/: routers.py  schemas.py
app/tasks/events/: __init__.py  events.py  types.py
app/tasks/repositories/: task_repository.py
app/tasks/services/: task_service.py
app/teams/: models.py
app/teams/api/: __init__.py  routers.py  schemas.py
app/teams/events/: __init__.py  events.py  types.py
app/teams/repositories/: __init__.py  team_repository.py
app/teams/services/: __init__.py  team_service.py
app/tools/: base.py  loader.py  registry.py
app/tools/api/: routers.py  schemas.py
app/tools/builtin/: text_processor.py  web_search.py
app/tools/events/: __init__.py  events.py  types.py
app/webhook/api/: __init__.py  routers.py  schemas.py
app/webhook/services/: webhook_agent_processor.py
app/webhooks/api/: routers.py  schemas.py
app/webhooks/services/: __init__.py  webhook_agent_processor.py
app/workflows/: __init__.py  engine.py  repository.py  service.py  workflow.py
app/workflows/api/: __init__.py  routers.py  schemas.py
app/workflows/events/: __init__.py  events.py  types.py
core/: config.py  logger.py  logging_config.py
core/exceptions/: domain.py
core/fastapi/dependencies/: __init__.py  permission.py
core/helpers/: crypto.py  lock_manager.py
docker/: docker-compose.yml
docs/: AGENTS-ORCHESTRATION.md  AGENT_OS_INTEGRATION.md  EVENT_DRIVEN_POSSIBILITIES.md
evals/: README.md
evals/accuracy/: run_accuracy.py
examples/: event_scenarios.py  logging_demonstration.py  orchestration_api_examples.py  simple_workflow.json
infrastructure/: __init__.py
infrastructure/database/: __init__.py  session.py  transactional.py
infrastructure/docker/: Dockerfile  docker-compose.nginx-test.yml  docker-compose.prod.yml  docker-compose.yml  init.sql  nginx.conf
scripts/: README_TEST_DB.md  create_agno_tables.py  create_tables.py  crud_transaction.py  generate_crud.py  migrate_logging.py  setup_database.py  setup_test_db.py  test_agent_history.py  test_agent_without_db.py  test_agno_database_basic.py  test_rollback.py
scripts/seeders/: agent_seeder.py
tests/: conftest.py
tests/api/: test_router_prefixes.py
(+142 files in other folders)
