[tool.poetry]
name = "agent-os"
version = "0.1.0"
description = ""
authors = ["João Netto <joaonettopb@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.117.1"}
uvicorn = "^0.36.0"
openai = "^1.108.1"
ruff = "^0.13.1"
dependency-injector = "^4.48.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
cryptography = "^42.0.0"
pgvector = "^0.3.0"
pypdf = "^5.1.0"
aiohttp = "^3.9.0"
agno = "^2.0.7"
psycopg2-binary = "^2.9.10"
psycopg = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
